# ROGII-Wellbore

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: xgb_baseline.yaml
data/: README.md
data/interim/: eval_zone_stats.parquet  gr_per_well_stats.parquet
data/raw/train/: 000d7d20__horizontal_well.csv  00bbac68__horizontal_well.csv  00bbac68__typewell.csv  015fe0d2__typewell.csv  01869cd4__typewell.csv  (+797 more)
data/train/: 000d7d20__typewell.csv  00e12e8b__horizontal_well.csv  00e12e8b__typewell.csv  015fe0d2__horizontal_well.csv  01982c1d__horizontal_well.csv  01982c1d__typewell.csv  028d7b28__typewell.csv  02e7fe5a__horizontal_well.csv  03a935ae__horizontal_well.csv  044af7d1__horizontal_well.csv  0498acab__horizontal_well.csv  0498acab__typewell.csv  052d64df__horizontal_well.csv  052d64df__typewell.csv  05948241__horizontal_well.csv  05948241__typewell.csv  059c8f24__typewell.csv  05a0ee4d__horizontal_well.csv  05a0ee4d__typewell.csv  06df5958__typewell.csv  0849b4e2__horizontal_well.csv  0849b4e2__typewell.csv  08fecf00__horizontal_well.csv  08fecf00__typewell.csv  09053135__horizontal_well.csv  09441b8d__typewell.csv  09ec2ca9__typewell.csv  0a57a29c__horizontal_well.csv  0a57a29c__typewell.csv  0bbf5e67__typewell.csv  0be01c24__horizontal_well.csv  0c1b160c__horizontal_well.csv  0c1b160c__typewell.csv  0dc5e64d__horizontal_well.csv  0dc835f3__horizontal_well.csv  0dd99dc5__horizontal_well.csv  0dd99dc5__typewell.csv  0e5e560d__horizontal_well.csv  0e5e560d__typewell.csv  109d9d70__typewell.csv  (+683 more)
docs/: 00_phases.md  01_eda_notes.md
experiments/xgb_baseline/: feature_importance.csv  fold_arr.npy  fold_models.pkl  metrics.json
mlruns/0/: meta.yaml
mlruns/516721951549977114/: meta.yaml
notebooks/: 00_initial_check.ipynb  00_smoke-test.ipynb  01_eda.ipynb  01_explore.ipynb  02_baselines.ipynb  03_gr_correlation.ipynb  03_trainwell.ipynb  03_typewell_explore.ipynb  04_audit_and_features.ipynb  05_xgboost.ipynb  mlflow.db
scripts/: build_features.py  cache_parquet.py  diagnose_lgbm.py  predict.py  run_baselines.py  run_lgbm.py  run_lgbm_v2.py  run_lgbm_v2_smoke.py  save_fold_models.py  train.py
src/: baselines.py  cv.py  evaluate.py  features.py  inference.py  io.py  training.py  utils.py
src/rogii_wellbore/: cli.py  config.py  cv.py  data.py  evaluate.py  features.py  features_v2.py  logging_config.py  oof.py  oof_v2.py  pads.py  predict.py
submissions/: kaggle_inference.ipynb  kaggle_submission.ipynb
submissions/baseline/: 05_xgboost_residual.csv
tests/: conftest.py  test_constant.py  test_cv.py  test_data.py  test_evaluate.py  test_features.py  test_features_v2.py  test_models.py  test_oof.py  test_pads.py
(+6 files in other folders)
