[project]
name = "rogii-wellbore-geology"
version = "0.0.1"
description = "Kaggle ROGII Wellbore Geology Prediction — TVT regression from gamma-ray logs."
requires-python = ">=3.11,<3.12"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "you" }]
# Dependencies are managed via environment.yml (conda).
# This file only carries package metadata, entry points, and tool configs.

[project.scripts]
rogii = "rogii_wellbore.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rogii_wellbore"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
no_implicit_optional = true
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
